# gfsk8-modem-clean

./: .gitignore  CHANGES_FROM_UPSTREAM.md  CMakeLists.txt  README.md
python/: CMakeLists.txt  gfsk8_python.cpp
src/: api.cpp
tests/: test_loopback.cpp  test_loopback_all.cpp
